<resources>
    <string name="app_name">game</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnStone">石頭</string>
    <string name="btnPaper">布</string>
    <string name="txtPlayer">妳出：</string>
    <string name="txtTitle">猜拳遊戲</string>
    <string name="txtPlayerTitle">你出：</string>
    <string name="txtPcTitle">電腦出：</string>
    <string name="btnScissors">剪刀</string>
    <string name="txtResultTitle">結果：</string>
    <string name="txtPlayerWin">你贏了!</string>
    <string name="txtPcWin">電腦贏了!</string>
    <string name="txtDraw">平手</string>
</resources>