<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="136dp"
        android:gravity="center"
        android:text="@string/txtTitle"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="128dp"
        android:text="@string/btnStone"
        android:textColor="@color/colorMsg"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPc"
        app:layout_constraintEnd_toStartOf="@+id/btnPaper"
        app:layout_constraintStart_toEndOf="@+id/btnScissors" />

    <Button
        android:id="@+id/btnPaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnStone"
        android:layout_alignBottom="@+id/btnStone"
        android:layout_marginStart="100dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="132dp"
        android:layout_toRightOf="@+id/btnStone"
        android:text="@string/btnPaper"
        android:textColor="@color/colorMsg"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStone"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnScissors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnStone"
        android:layout_alignBottom="@+id/btnStone"
        android:layout_marginStart="100dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="138dp"
        android:layout_toLeftOf="@+id/btnStone"
        android:text="@string/btnScissors"
        android:textColor="@color/colorMsg"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPc"
        app:layout_constraintEnd_toStartOf="@+id/btnStone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtPlayerTitle"
        android:layout_alignLeft="@+id/btnStone"
        android:layout_alignBottom="@+id/txtPlayerTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/btnScissors"
        android:textColor="@color/colorStatus"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/txtResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtPc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignLeft="@+id/txtPlayer"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:text="@string/btnStone"
        android:textColor="@color/colorStatus"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPlayerTitle"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignLeft="@+id/txtPc"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/txtPlayerWin"
        android:textColor="@color/colorResult"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPlayer"
        android:layout_alignLeft="@+id/txtPlayerTitle"
        android:layout_marginStart="388dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="800dp"
        android:layout_marginBottom="16dp"
        android:gravity="right"
        android:text="@string/txtPcTitle"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPc"
        android:layout_alignRight="@+id/textView2"
        android:layout_marginStart="317dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="800dp"
        android:layout_marginBottom="11dp"
        android:gravity="right"
        android:text="@string/txtResultTitle"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txtResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPlayer" />

    <TextView
        android:id="@+id/txtPlayerTitle"
        android:layout_width="103dp"
        android:layout_height="51dp"
        android:layout_alignLeft="@+id/btnScissors"
        android:layout_centerVertical="true"
        android:layout_marginStart="358dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="800dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txtPlayerTitle"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPc"
        app:layout_constraintVertical_bias="0.272" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="81dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="134dp"
        android:layout_height="168dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/scissor"
        app:layout_constraintBottom_toTopOf="@+id/btnScissors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.476" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="130dp"
        android:layout_height="164dp"
        android:layout_marginStart="268dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="9dp"
        android:src="@drawable/rock"
        app:layout_constraintBottom_toTopOf="@+id/btnStone"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.448" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="144dp"
        android:layout_height="150dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="9dp"
        android:src="@drawable/paper"
        app:layout_constraintBottom_toTopOf="@+id/btnPaper"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />


</androidx.constraintlayout.widget.ConstraintLayout>